--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: copykat
+Package: copykat3
 Type: Package
-Title: COPYKAT: Inference of genomic copy number and subclonal structure of human tumors from high-throughput single cell RNA-seq data
-Version: 1.1.0
+Title: COPYKAT3: Inference of genomic copy number and subclonal structure of human tumors from high-throughput single cell RNA-seq data
+Version: 1.1.1
 Author: Ruli Gao
 Maintainer: Ruli Gao <ruli.gao@northwestern.edu>
-Description: COPYKAT is a computational tool using integrative Bayesian approaches to identify genome-wide aneuploidy at 5MB resolution in single cells to separate aneuploid (tumor) cells from diploid (normal) cells, and tumor subclones using high-throughput sc-RNAseq data.
+Description: COPYKAT3 is a computational tool using integrative Bayesian approaches to identify genome-wide aneuploidy at 5MB resolution in single cells to separate aneuploid (tumor) cells from diploid (normal) cells, and tumor subclones using high-throughput sc-RNAseq data.
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
